# ecchat

./: CMakeLists.txt  README  buffer.h  client.h  contact.c  contact.h  crypto.c  crypto.h  ecchat-encrypt-id.c  ecchat.h  ecchatd.c  identity.c  identity.h  info.c  info.h  inttypes.h  list.h  txqueue.c  txqueue.h
ca-scripts/: add-client.sh  new-ca.sh  openssl.conf
ecchat-qt/: chatwidget.cpp  chatwidget.hpp  client.cpp  client.hpp  client_posix.cpp  client_win.cpp  contact.cpp  contact.h  contactwidget.cpp  contactwidget.hpp  ecchat-qt.h  ecchat-qt.pro  ecchat-qt.qrc  identitywidget.cpp  identitywidget.hpp  identitywidget.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  msgwidget.cpp  msgwidget.hpp  stick_wtd.cpp  stick_wtd.hpp  version.h
openwrt/ecchat/: Makefile
openwrt/ecchat/files/: ecchatd.init
